save dqn and fixes